--- a/T3kCfg/QGeneralSettingWidget.ui
+++ b/T3kCfg/QGeneralSettingWidget.ui
@@ -963,7 +963,7 @@
         <item>
          <widget class="QCheckBox" name="ChkInputModeAutoSelect">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -975,7 +975,7 @@
            </size>
           </property>
           <property name="cursor">
-           <cursorShape>PointingHandCursor</cursorShape>
+           <cursorShape>BusyCursor</cursorShape>
           </property>
           <property name="focusPolicy">
            <enum>Qt::TabFocus</enum>
