T3kCfgFE  - 업그레이드 시, 실패할 경우 재시도 추가
T3kSoftlogic
 - Test에서 닫기 버튼 터치로 입력 되게 수정(bug)

--- a/T3kCfgFE/QFirmwareUpgradeDialog.ui
+++ b/T3kCfgFE/QFirmwareUpgradeDialog.ui
@@ -137,6 +137,25 @@ selection-background-color: rgba(100, 100, 100, 100);</string>
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QStyleButton" name="btnRetry">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Retry</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
        <item>
@@ -166,6 +185,11 @@ selection-background-color: rgba(100, 100, 100, 100);</string>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
+  <customwidget>
+   <class>QStyleButton</class>
+   <extends>QPushButton</extends>
+   <header>QStyleButton.h</header>
+  </customwidget>
   <customwidget>
    <class>QSlidingStackedWidget</class>
    <extends>QStackedWidget</extends>
